# FlowOS

./: .gitignore  Dockerfile  README.md  api.py  init_db.py  main.py  proxy.py  pyproject.toml
.db/chroma_db/bdbff1ad-e77b-417b-8b9f-3f8441fc536a/: index_metadata.pickle
chat/: assistant.py  model_manager.py
config/: app.yaml  assistant.yaml  database.py  model.yaml  rag.yaml
migrations/: env.py  verify_migration.py
migrations/versions/: 0f225353e1db_initial_migration.py
models/: chat_record.py
rag/: rag_manager.py  source.xlsx  test.txt  test2.docx
utils/: auto_ollama.py  debugging.py  document_loader.py  move.py  test_milvus.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  test.py
web/.vercel/: project.json
web/public/: index.html
web/src/: App.js  App.jsx  index.css
web/src/components/: DesktopApp.jsx  LandingPage.jsx  MobileApp.jsx  PersonCard.jsx  PrivateRoute.jsx
web/src/hooks/: useApiStatus.js  useMobile.js  useWebSocket.js
web/src/services/: apiService.js  storageService.js
web/src/test/: chatAssistantTest.js
web/src/utils/: constants.js  profileAnalyzer.js
